--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
      <maven.compiler.target>1.8</maven.compiler.target>
 </properties>
   <dependencies>
+	  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-slf4j-impl</artifactId>
+    <version>2.7</version>
+</dependency>
      <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
