--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,9 @@
     <property name="target" value="1.5"/>
     <property name="source" value="1.5"/>
     <path id="Maven Dependencies.libraryclasspath">
+        <pathelement location="../../.m2/repository/org/apache/logging/log4j/log4j-slf4j-impl/2.7/log4j-slf4j-impl-2.7.jar"/>
+        <pathelement location="../../.m2/repository/org/slf4j/slf4j-api/1.7.21/slf4j-api-1.7.21.jar"/>
+        <pathelement location="../../.m2/repository/org/apache/logging/log4j/log4j-api/2.7/log4j-api-2.7.jar"/>
         <pathelement location="../../.m2/repository/junit/junit/4.8.1/junit-4.8.1.jar"/>
         <pathelement location="../../.m2/repository/mysql/mysql-connector-java/8.0.16/mysql-connector-java-8.0.16.jar"/>
         <pathelement location="../../.m2/repository/com/google/protobuf/protobuf-java/3.6.1/protobuf-java-3.6.1.jar"/>
@@ -76,6 +79,10 @@
         <path refid="isw2_pp1.classpath"/>
         <path refid="Maven Dependencies.libraryclasspath"/>
     </path>
+    <path id="run.EventQueueConcurrentLoad_ParametrizedTest (1).classpath">
+        <path refid="isw2_pp1.classpath"/>
+        <path refid="Maven Dependencies.libraryclasspath"/>
+    </path>
     <target name="init">
         <mkdir dir="target/classes"/>
         <mkdir dir="target/test-classes"/>
@@ -132,6 +139,15 @@
             <test name="isw2_pp1.LRUMemoryCacheConcurrenUnit_ParametrizedTest" todir="${junit.output.dir}"/>
             <jvmarg line="-ea"/>
             <classpath refid="run.isw2_pp1.classpath"/>
+        </junit>
+    </target>
+    <target name="EventQueueConcurrentLoad_ParametrizedTest (1)">
+        <mkdir dir="${junit.output.dir}"/>
+        <junit fork="yes" printsummary="withOutAndErr">
+            <formatter type="xml"/>
+            <test name="isw2_pp1.EventQueueConcurrentLoad_ParametrizedTest" todir="${junit.output.dir}"/>
+            <jvmarg line="-ea"/>
+            <classpath refid="run.EventQueueConcurrentLoad_ParametrizedTest (1).classpath"/>
         </junit>
     </target>
     <target name="junitreport">
