--- a/pom.xml
+++ b/pom.xml
@@ -79,11 +79,12 @@
 				<scope>system</scope>
 				<systemPath>${project.basedir}/src/test/lib//jcs-1.3-fat.jar</systemPath>
 			</dependency>
-			<dependency>
-				<groupId>concurrent</groupId>
-				<artifactId>concurrent</artifactId>
-				<version>1.0</version>
-			</dependency>
+                        <dependency>
+                          <groupId>org.apache.logging.log4j</groupId>
+                         <artifactId>log4j-slf4j-impl</artifactId>
+                         <version>2.7</version>
+                       </dependency>			
+			
 			<!-- https://mvnrepository.com/artifact/org.jacoco/org.jacoco.agent -->
 <dependency>
     <groupId>org.jacoco</groupId>
