--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
     <artifactId>log4j-slf4j-impl</artifactId>
     <version>2.7</version>
 </dependency>
+	  <dependency>
+   <groupId>log4j</groupId>
+   <artifactId>log4j</artifactId>
+   <version>1.2.15</version>
+</dependency>
      <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
