--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-slf4j-impl</artifactId>
     <version>2.7</version>
+</dependency>
      <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -27,6 +28,7 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.16</version>
         </dependency>
+    
   <!-- https://mvnrepository.com/artifact/org.apache.jcs/jcs -->
 <dependency>
     <groupId>org.apache.jcs</groupId>
