--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
      <maven.compiler.target>1.8</maven.compiler.target>
 </properties>
   <dependencies>
+  <!-- https://mvnrepository.com/artifact/log4j/apache-log4j-extras -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>apache-log4j-extras</artifactId>
+    <version>1.2.17</version>
+</dependency>
+  
   <dependency>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-slf4j-impl</artifactId>
