--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,8 @@
     <property name="target" value="1.5"/>
     <property name="source" value="1.5"/>
     <path id="Maven Dependencies.libraryclasspath">
+        <pathelement location="../../.m2/repository/log4j/apache-log4j-extras/1.2.17/apache-log4j-extras-1.2.17.jar"/>
+        <pathelement location="../../.m2/repository/log4j/log4j/1.2.17/log4j-1.2.17.jar"/>
         <pathelement location="../../.m2/repository/org/apache/logging/log4j/log4j-slf4j-impl/2.7/log4j-slf4j-impl-2.7.jar"/>
         <pathelement location="../../.m2/repository/org/slf4j/slf4j-api/1.7.21/slf4j-api-1.7.21.jar"/>
         <pathelement location="../../.m2/repository/org/apache/logging/log4j/log4j-api/2.7/log4j-api-2.7.jar"/>
@@ -38,7 +40,6 @@
         <pathelement location="../../.m2/repository/commons-dbcp/commons-dbcp/1.2.2/commons-dbcp-1.2.2.jar"/>
         <pathelement location="../../.m2/repository/commons-pool/commons-pool/1.3/commons-pool-1.3.jar"/>
         <pathelement location="../../.m2/repository/hsqldb/hsqldb/1.7.3.3/hsqldb-1.7.3.3.jar"/>
-        <pathelement location="../../.m2/repository/log4j/log4j/1.2.12/log4j-1.2.12.jar"/>
         <pathelement location="../../.m2/repository/javax/servlet/servlet-api/2.3/servlet-api-2.3.jar"/>
         <pathelement location="../../.m2/repository/tomcat/tomcat-util/3.2.1/tomcat-util-3.2.1.jar"/>
         <pathelement location="../../.m2/repository/velocity/velocity/1.5/velocity-1.5.jar"/>
