--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,14 @@
     <artifactId>apache-log4j-extras</artifactId>
     <version>1.2.17</version>
 </dependency>
-  
-  <dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-slf4j-impl</artifactId>
-    <version>2.7</version>
+  <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
 </dependency>
+  
+
      <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
