--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,43 @@
     <version>0.8.6</version>
     <scope>test</scope>
 </dependency>
+ <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.12</version>
+      <type>jar</type>
+      <scope>compile</scope>
+      <optional>true</optional>
+    </dependency>
+  <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+
+     <dependency>
+      <groupId>commons-configuration</groupId>
+      <artifactId>commons-configuration</artifactId>
+      <version>1.4</version>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+
+    <!--  REQUIRED FOR JCS CORE -->
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+
+    <!--  REQUIRED FOR JCS CORE -->
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.1</version>
+      <type>jar</type>
+      <scope>compile</scope>
+      <optional>true</optional>
+    </dependency>
+
 		</dependencies>
 		<build>
 			<plugins>
