--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
 				<artifactId>jcs</artifactId>
 				<version>1.3</version>
 				<scope>system</scope>
-				<systemPath>${project.basedir}/src/test/lib//jcs-1.3-fat.jar</systemPath>
+				<systemPath>${project.basedir}/src/test/lib/jcs-1.3-fat.jar</systemPath>
 			</dependency>
 			<!-- https://mvnrepository.com/artifact/org.jacoco/org.jacoco.agent -->
 <dependency>
