--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,12 @@
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.12</version>
-      <type>jar</type>
-      <scope>compile</scope>
-      <optional>true</optional>
     </dependency>
-  <!-- https://mvnrepository.com/artifact/log4j/log4j -->
-
+<dependency>
+  <groupId>javax.transaction</groupId>
+  <artifactId>jta</artifactId>
+  <version>1.1</version>
+</dependency>
      <dependency>
       <groupId>commons-configuration</groupId>
       <artifactId>commons-configuration</artifactId>
