--- a/src/conf/log4j.properties
+++ b/src/conf/log4j.properties
@@ -20,13 +20,20 @@ log4j.rootCategory=INFO, A1
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 # Print the date in ISO 8601 format
-log4j.appender.A1.layout.ConversionPattern=%p\t%d{ISO8601}\t%r\t%c\t[%t]\t%m%n
+log4j.appender.A1.layout.ConversionPattern=%d %-5p [%c{1}] [%t] [%x] %m%n
 
 # RF --file appender
 log4j.appender.RF=org.apache.log4j.RollingFileAppender
 log4j.appender.RF.File=server.log
 log4j.appender.RF.layout=org.apache.log4j.PatternLayout
-log4j.appender.RF.layout.ConversionPattern=%p\t%d{ISO8601}\t%r\t%c\t[%t]\t%m%n
+log4j.appender.RF.layout.ConversionPattern=%d %-5p [%c{1}] [%t] [%x] %m%n
+
+# WF -- special file for warnings
+# log4j.appender.WF=org.apache.log4j.RollingFileAppender
+# log4j.appender.WF.File=I:/dev/jakarta-turbine-jcs/src/scripts/warnings.log
+# log4j.appender.WF.layout=org.apache.log4j.PatternLayout
+# log4j.appender.WF.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+
 
 # ################################################################################
 
