--- a/src/test/srclib/jcs-1.3/src/test-conf/log4j.properties
+++ b/src/test/srclib/jcs-1.3/src/test-conf/log4j.properties
@@ -30,7 +30,7 @@ log4j.category.org.apache.jcs.utils.threadpool=INFO
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %p [%c{1}] - <%m>%n
+log4j.appender.stdout.layout.ConversionPattern=%d %-5p [%c{1}] [%t] [%x] %m%n
 
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
 log4j.appender.logfile.File=target/jcs.log
@@ -40,5 +40,5 @@ log4j.appender.logfile.Append=false
 log4j.appender.logfile.MaxBackupIndex=3
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 # Pattern to output : date priority [category] - <message>line_separator
-log4j.appender.logfile.layout.ConversionPattern=%d %p [%c{1}] - <%m>%n
+log4j.appender.logfile.layout.ConversionPattern=%d %-5p [%c{1}] [%t] [%x] %m%n
 
