--- a/build.xml
+++ b/build.xml
@@ -71,6 +71,7 @@
         <pathelement location="target/classes"/>
         <pathelement location="target/test-classes"/>
         <path refid="Maven Dependencies.libraryclasspath"/>
+        <pathelement location="src/test-conf/TestDiskCache.ccf"/>
     </path>
     <path id="run.EventQueueConcurrentLoad_ParametrizedTest (1).classpath">
         <path refid="isw2_pp1.classpath"/>
