--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: java
+before_install:
+- sudo apt-get -qq update
+- sudo apt-get install ant-optional
+install:
+- mvn clean install -Pcoverage 
 script: 
-  - mvn clean test
+ - mvn clean test
+ 
