--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,12 @@
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.12</version>
+      <type>jar</type>
+      <scope>compile</scope>
+      <optional>true</optional>
     </dependency>
-<dependency>
-  <groupId>javax.transaction</groupId>
-  <artifactId>jta</artifactId>
-  <version>1.1</version>
-</dependency>
+  <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+
      <dependency>
       <groupId>commons-configuration</groupId>
       <artifactId>commons-configuration</artifactId>
@@ -97,7 +97,6 @@
 					</includes>
 					 </resource>
         </resources>
-      
   </build>
   <profiles>
  <profile>
@@ -105,13 +104,13 @@
 		<activation>
 			<activeByDefault>false</activeByDefault>
 		</activation>
-				<dependencies>
+		<dependencies>
 			<dependency>
 				<groupId>org.apache.jcs</groupId>
 				<artifactId>jcs</artifactId>
 				<version>1.3</version>
 				<scope>system</scope>
-				<systemPath>${project.basedir}/src/test/lib/jcs-1.3-fat.jar</systemPath>
+				<systemPath>${project.basedir}/src/test/lib//jcs-1.3-fat.jar</systemPath>
 			</dependency>
 			<!-- https://mvnrepository.com/artifact/org.jacoco/org.jacoco.agent -->
 <dependency>
@@ -159,20 +158,11 @@
 
 		</dependencies>
 		<build>
-	      <resources>
-            	<resource>
-					<directory>src/test-conf</directory>
-					<includes>
-						<include>**/*.properties</include>
-						<include>**/*.ccf</include>
-					</includes>
-					 </resource>
-        </resources>
 			<plugins>
 				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.5.6.201201232323</version>
+					<version>0.8.5</version>
 					<executions>
 						<execution>
 							<id>InstrumentJacoco</id>
@@ -209,7 +199,7 @@
                      <dependency>
                         <groupId>org.jacoco</groupId>
                         <artifactId>org.jacoco.ant</artifactId>
-                        <version>0.5.6.201201232323</version>
+                        <version>0.8.5</version>
                      </dependency>
                      <dependency>
                         <groupId>ant-contrib</groupId>
@@ -225,6 +215,7 @@
                            <goal>run</goal>
                         </goals>
                         <configuration>
+                             <sourceDirectory>${project.basedir}/src/test/srclib/jcs-1.3/src/java</sourceDirectory>
                            <target>
                               <property name="source-location" location="../"/>
                               <taskdef name="jacoco-report"
@@ -257,7 +248,7 @@
                                                 <sourcefiles
                                                    encoding="UTF-8">
                                                    <fileset
-                                                      dir="${project.basedir}/src/test/srclib/jcs-1.3/src" />
+                                                      dir="${project.basedir}/src/test/srclib/jcs-1.3/src/java" />
                                                 </sourcefiles>
                                              </structure>
                                              <html
